tests/ui/const-generics/associated-const-bindings/dyn-compat-non-type-assoc-const.stderr
error[E0191]: the value of the associated constant `K` in `Trait` must be specified
  --> $DIR/dyn-compat-non-type-assoc-const.rs:13:16
   |
LL |     const K: usize;
   |     -------------- `K` defined here
...
LL |     let _: dyn Trait;
   |                ^^^^^
   |
help: specify the associated constant
   |
LL |     let _: dyn Trait<K = /* CONST */>;
   |                     +++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0191`.
